--- a/Develop/templates/intern.html
+++ b/Develop/templates/intern.html
@@ -1,9 +1,9 @@
-<div class="card employee-card">
-    <div class="card-header">
+<div class="card employee-card" style="margin: 0.2rem; box-shadow: 0px 10px 20px grey;">
+    <div class="card-header bg-primary text-white">
         <h2 class="card-title">{{ name }}</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>{{ role }}</h3>
     </div>
-    <div class="card-body">
+    <div class="card-body bg-light">
         <ul class="list-group">
             <li class="list-group-item">ID: {{ id }}</li>
             <li class="list-group-item">Email: <a href="mailto:{{ email }}">{{ email }}</a></li>
